# Barricade

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  app.py  compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  schema.txt  todo.txt
.github/: FUNDING.yml
alembic/: env.py
alembic/versions/: 0000_initial_migration.py  0001_add_pc_console_fields.py  0002_token_platform_field.py  0003_add_report_filter.py  0004_add_responder_name.py  0005_update_crcon_api_url.py  0006_expanded_config.py  0007_optional_owner.py  0008_delete_integrations.py  0009_add_report_message_type.py  0010_add_watchlists.py  0011_add_eos_id.py  0012_hllv_support.py  0012_integration_web_tokens.py  0012_make_token_admin_optional.py  0013_track_edit_timestamps.py  0014_split_settings.py  0015_add_platform_filter.py  0016_community_games_flag.py  0017_add_effective_platforms_column.py  0018_add_report_comments.py
assets/: emojis_banned.xcf  emojis_pills.xcf  emojis_ticks.xcf
barricade/: __init__.py  bans.py  config.py  constants.py  enums.py  exceptions.py  forwarding.py  hooks.py  logger.py  schemas.py  steam.py  urls.py  utils.py
bunker/: __init__.py  bans.py  communities.py  constants.py  enums.py  exceptions.py  forwarding.py  google.py  hooks.py  reports.py  responses.py  schemas.py  urls.py  utils.py
scripts/: Code.gs  convert_player_id_to_remote_id.py  create_web_superuser.py  populate_dummy_data.py  revoke_dangling_bans.py  update_discord_roles.py  ws_client_example.py  ws_server_example.py
tests/: test_submission_reasons.py
(+168 files in other folders)
